--- a/home.html
+++ b/home.html
@@ -227,13 +227,13 @@ img {
 
 </br></br><div class="row">
   <div class="column">
-  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
+  <img src="https://i.ytimg.com/vi/WVLTu_WDlWE/maxresdefault.jpg" alt="Snow" style="width:100%">
   </div>
   <div class="column">
-    <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
+    <img src="https://i.ytimg.com/vi/1m3nSty_bG4/maxresdefault.jpg" alt="Forest" style="width:100%">
   </div>
   <div class="column">
-  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
+  <img src="https://i.ytimg.com/vi/WVLTu_WDlWE/maxresdefault.jpg" alt="Snow" style="width:100%">
   </div>
 </div>
 
@@ -291,13 +291,13 @@ img {
 
 </br></br><div class="row">
   <div class="column">
-  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
+  <img src="https://i.ytimg.com/vi/VnIxOtN2l3g/maxresdefault.jpg" alt="Snow" style="width:100%">
   </div>
   <div class="column">
-    <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
+    <img src="https://i.ytimg.com/vi/1m3nSty_bG4/maxresdefault.jpg" alt="Forest" style="width:100%">
   </div>
   <div class="column">
-  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
+  <img src=https://i.ytimg.com/vi/VnIxOtN2l3g/maxresdefault.jpg" alt="Snow" style="width:100%">
   </div>
 </div>
 
@@ -355,13 +355,13 @@ img {
 
 </br></br><div class="row">
   <div class="column">
-  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
+  <img src="https://pbs.twimg.com/media/EZFOkclWoAEUgkY.jpg" alt="Snow" style="width:100%">
   </div>
   <div class="column">
-    <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
+    <img src="https://i.ytimg.com/vi/VnIxOtN2l3g/maxresdefault.jpg" alt="Forest" style="width:100%">
   </div>
   <div class="column">
-  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
+  <img src="https://pbs.twimg.com/media/EZFOkclWoAEUgkY.jpg" alt="Snow" style="width:100%">
   </div>
 </div>
 
@@ -427,9 +427,9 @@ function showSlides(n) {
   dots[slideIndex-1].className += " active";
   captionText.innerHTML = dots[slideIndex-1].alt;
 }
-</script>
- </div>  
+</script> 
 </body>
+ </div> 
 <div class="album py-5 bg-light">
 	<hr style="width:85%;height:3px" color="grey"><br>
 	<head>
