--- a/home.html
+++ b/home.html
@@ -101,139 +101,66 @@
         </a>
     </div>
 </section>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <div class="album py-5 bg-light">
-<hr style="width:85%;height:3px" color="grey"><br>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
-  font-family: rubik;
-  margin: 0;
-}
+* {box-sizing: border-box}
+body {font-family: rubik; margin:0}
 
-* {
-  box-sizing: border-box;
-}
-
-img {
-  vertical-align: middle;
-}
-
-/* Position the image container (needed to position the left and right arrows) */
-.container {
+/* Slideshow container */
+.slideshow-container {
   position: relative;
+  background: #FFFFFF;
 }
 
-/* Hide the images by default */
+/* Slides */
 .mySlides {
   display: none;
-}
-
-/* Add a pointer when hovering over the thumbnail images */
-.cursor {
-  cursor: pointer;
+  padding: 80px;
+  text-align: center;
 }
 
 /* Next & previous buttons */
-.prev,
-.next {
+.prev, .next {
   cursor: pointer;
-  position: absolute;
+  position:absolute;
   top: 20%;
   width: auto;
+  margin-top: -30px;
   padding: 16px;
-  margin-top: -50px;
-  color: black;
+  color: #888;
   font-weight: bold;
   font-size: 20px;
   border-radius: 0 3px 3px 0;
   user-select: none;
-  -webkit-user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
+  position: absolute;
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #000000;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* Container for image text */
-.caption-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* three columns side by side */
-.column {
-  float: left;
-  width: 16.66%;
-}
-
-/* Add a transparency effect for thumnbail images */
-.demo {
-  opacity: 0.6;
-}
-
-.active,
-.demo:hover {
-  opacity: 1;
-}
-</style>
-<body>
-
-<h2 style="text-align:center">Slideshow Gallery</h2>
-
-<div class="container">
-  <div class="mySlides">
-    <head>
-<style>
-* {
-  box-sizing: border-box;
-}
-
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 5px;
-}
-
-/* Clearfix (clear floats) */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
 </style>
 </head>
 <body>
+<div class="slideshow-container">
+
+<div class="mySlides">
+  </head>
+<body>
 
 
-</br></br><div class="row">
+<div class="row">
   <div class="column">
-  <img src="https://i.ytimg.com/vi/WVLTu_WDlWE/maxresdefault.jpg" alt="Snow" style="width:100%">
+  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
   </div>
   <div class="column">
-    <img src="https://i.ytimg.com/vi/1m3nSty_bG4/maxresdefault.jpg" alt="Forest" style="width:100%">
+    <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
   </div>
   <div class="column">
-  <img src="https://i.ytimg.com/vi/WVLTu_WDlWE/maxresdefault.jpg" alt="Snow" style="width:100%">
+  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
   </div>
 </div>
 
@@ -263,9 +190,10 @@ img {
 </style>
 </head>
 <body>
-  </div>
 
-  <div class="mySlides">
+</div>
+
+<div class="mySlides">
     <head>
 <style>
 * {
@@ -289,47 +217,22 @@ img {
 <body>
 
 
-</br></br><div class="row">
+<div class="row">
   <div class="column">
-  <img src="https://i.ytimg.com/vi/VnIxOtN2l3g/maxresdefault.jpg" alt="Snow" style="width:100%">
+    <img src="https://i.pinimg.com/originals/da/f0/02/daf002f6c5b9950dbe21cb90423cef74.jpg" alt="Snow" style="width:100%">
   </div>
   <div class="column">
-    <img src="https://i.ytimg.com/vi/1m3nSty_bG4/maxresdefault.jpg" alt="Forest" style="width:100%">
+    <img src="https://i.ytimg.com/vi/-6YCJt5V50o/maxresdefault.jpg" alt="Forest" style="width:100%">
   </div>
   <div class="column">
-  <img src=https://i.ytimg.com/vi/VnIxOtN2l3g/maxresdefault.jpg" alt="Snow" style="width:100%">
+    <img src="https://i.ytimg.com/vi/N0P_eRkSwFw/maxresdefault.jpg" alt="Mountains" style="width:100%">
   </div>
 </div>
 
 </body>
-  </div>
+</div>
 
-
-  <div class="mySlides1">
-    <head>
-<style>
-* {
-  box-sizing: border-box;
-}
-
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 5px;
-}
-
-/* Clearfix (clear floats) */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-</style>
-</head>
-<body>
-  </div>
-
-  <div class="mySlides">
+<div class="mySlides">
     <head>
 <style>
 * {
@@ -353,51 +256,29 @@ img {
 <body>
 
 
-</br></br><div class="row">
+<div class="row">
   <div class="column">
-  <img src="https://pbs.twimg.com/media/EZFOkclWoAEUgkY.jpg" alt="Snow" style="width:100%">
+    <img src="https://i.pinimg.com/originals/da/f0/02/daf002f6c5b9950dbe21cb90423cef74.jpg" alt="Snow" style="width:100%">
   </div>
   <div class="column">
-    <img src="https://i.ytimg.com/vi/VnIxOtN2l3g/maxresdefault.jpg" alt="Forest" style="width:100%">
-  </div>
-  <div class="column">
-  <img src="https://pbs.twimg.com/media/EZFOkclWoAEUgkY.jpg" alt="Snow" style="width:100%">
+    <img src="https://i.ytimg.com/vi/-6YCJt5V50o/maxresdefault.jpg" alt="Forest" style="width:100%">
   </div>
 </div>
 
 </body>
-  </div>
+</div>
 
+<a class="prev" onclick="plusSlides(-1)">❮</a>
+<a class="next" onclick="plusSlides(1)">❯</a>
 
-  <div class="mySlides1">
-    <head>
-<style>
-* {
-  box-sizing: border-box;
-}
+</div>
 
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 5px;
-}
+<div class="dot-container">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
+</div>
 
-/* Clearfix (clear floats) */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-</style>
-</head>
-<body>
-  </div>
-    
-    
-  <a class="prev" onclick="plusSlides(-1)">❮</a>
-  <a class="next" onclick="plusSlides(1)">❯</a>
-
-  
 <script>
 var slideIndex = 1;
 showSlides(slideIndex);
@@ -413,21 +294,20 @@ function currentSlide(n) {
 function showSlides(n) {
   var i;
   var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("demo");
-  var captionText = document.getElementById("caption");
-  if (n > slides.length) {slideIndex = 1}
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
   if (n < 1) {slideIndex = slides.length}
   for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
+      slides[i].style.display = "none";  
   }
   for (i = 0; i < dots.length; i++) {
       dots[i].className = dots[i].className.replace(" active", "");
   }
-  slides[slideIndex-1].style.display = "block";
+  slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  captionText.innerHTML = dots[slideIndex-1].alt;
 }
-</script> 
+</script>
+
 </body>
  </div> 
 <div class="album py-5 bg-light">
