--- a/home.html
+++ b/home.html
@@ -140,21 +140,21 @@
   <div class="col-md-6 position-static p-4 pl-md-0">
 	  <h5 class="mt-0">NEWSFLASH AND UPCOMING EPISODES</h5></br>
 
-<button type="button" class="collapsible">Open Collapsible</button>
+<button type="button" class="collapsible">Season 4 Release Date!</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+	<p></br>Season 4 is delayed to 2021 due to Covid-19</p>
 </div>
-<button type="button" class="collapsible">Open Section 2</button>
+<button type="button" class="collapsible">Summary for the Miraculous New-York</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>During a school field trip, Ladybug and Cat Noir meet the american superheroes, whom they have to save from an akumatized super-villain. They will also discover that Miraculous exist in the United States, too.</p>
 </div>
-<button type="button" class="collapsible">Open Section 3</button>
+<button type="button" class="collapsible">Miraculous New-York special Release Date!</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>The 52 mins Miraculous New-York Special is supposed to come out in between 1st September and 2nd October of this year on Disney Channel France</p>
 </div>
-<button type="button" class="collapsible">Open Section 3</button>
+<button type="button" class="collapsible">The Miraculous Movie Release Date!</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>The Miraculous Movie will air at the end of 2021.</p>
 </div>
 
 
