--- a/home.html
+++ b/home.html
@@ -146,15 +146,15 @@
 </div>
 <button type="button" class="collapsible">Summary for the Miraculous New-York</button>
 <div class="content">
-  <p>During a school field trip, Ladybug and Cat Noir meet the american superheroes, whom they have to save from an akumatized super-villain. They will also discover that Miraculous exist in the United States, too.</p>
+	<p></br>During a school field trip, Ladybug and Cat Noir meet the american superheroes, whom they have to save from an akumatized super-villain. They will also discover that Miraculous exist in the United States, too.</p>
 </div>
 <button type="button" class="collapsible">Miraculous New-York special Release Date!</button>
 <div class="content">
-  <p>The 52 mins Miraculous New-York Special is supposed to come out in between 1st September and 2nd October of this year on Disney Channel France</p>
+	<p></br>The 52 mins Miraculous New-York Special is supposed to come out in between 1st September and 2nd October of this year on Disney Channel France</p>
 </div>
 <button type="button" class="collapsible">The Miraculous Movie Release Date!</button>
 <div class="content">
-  <p>The Miraculous Movie will air at the end of 2021.</p>
+	<p></br>The Miraculous Movie will air at the end of 2021.</p>
 </div>
 
 
@@ -273,7 +273,7 @@ img {
 </style>
 <body>
 
-	<h2 style="text-align:center">Chibi Episodes</h2></br>
+	<h2 style="text-align:center">Video Clips!</h2></br>
 
 <div class="container">
   <div class="mySlides">
@@ -302,7 +302,7 @@ img {
 
 </br></br><div class="row">
   <div class="column">
-  <img src="https://i.ytimg.com/vi/IHGdoPFlY9U/maxresdefault.jpg" alt="Snow" style="width:100%">
+  <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/special%20covid%2019.jpg?raw=true" alt="Snow" style="width:100%">
   </div>
   <div class="column">
     <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
