--- a/home.html
+++ b/home.html
@@ -303,7 +303,7 @@ img {
 </br></br><div class="row">
   <div class="column">
   <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/special%20covid%2019.jpg?raw=true" alt="Snow" style="width:100%">
-	  <figcaption class="figure-caption" href="index.html">Covid-19 Special Clip!</figcaption>
+	  <figcaption class="figure-caption"><a href="hearthunter.eng.html">Covid-19 Special Clip!</a></figcaption>
   </div>
   <div class="column">
     <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
