--- a/hometest.html
+++ b/hometest.html
@@ -211,7 +211,7 @@ img {
 .next {
   cursor: pointer;
   position: absolute;
-  top: 1%;
+  top: 2%;
   width: auto;
   padding: 16px;
   margin-top: -50px;
@@ -551,6 +551,39 @@ function showSlides(n) {
               </div>
             </div>
           </div>
+ <div class="row">
+         <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="felix.eng.html"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="felix.eng.html">Felix<br><br></a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S3E23 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S3E25 | 22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
+            <a href="miraclequeen.eng.html"><img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+            <div class="card-body">
+              <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">S3E26 | 22 mins</small>
+              </div>
+            </div>
+          </div>
 	<head>
 <style>
 /* unvisited link */
@@ -560,7 +593,7 @@ a:link {
 
 /* visited link */
 a:visited {
-  color: black;
+  color: grey;
 }
 
 /* mouse over link */
@@ -573,12 +606,7 @@ a:active {
   color: grey;
 } 
 </style>
-</head>
-<body>
-
- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://itsladybug.cf/page80.html">SHOW ALL</a>
-
-</body>	  
+</head>  
         </div></div></div></div></main>
 </div>
   </div>
