--- a/hometest.html
+++ b/hometest.html
@@ -519,71 +519,84 @@ function showSlides(n) {
     <div class="container">
 
       <div class="row">
-         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="felix.eng.html"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+            <a href="stormyweather.eng.html"><img src="assets/images/s1e01-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="felix.eng.html">Felix<br><br></a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S3E23 | 22 mins</small>
+              <p class="card-text"><a href="stormyweather.eng.html">Stormy Weather</a></p>               
+              <div class="d-flex justify-content-between align-items-center">                 
+                <small class="text-muted">22 mins</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+          <div class="card shadow-sm mb-4 bg-white rounded">
+            <a href="thebubbler.eng.html"><img src="assets/images/s1e02-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
+              <p class="card-text"><a href="thebubbler.eng.html">The Bubbler</a></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S3E25 | 22 mins</small>
+                 <small class="text-muted">22 mins</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="miraclequeen.eng.html"><img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+             <a href="thepharaoh.eng.html"><img src="assets/images/s1e03-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a></p>
+              <p class="card-text"><a href="thepharaoh.eng.html">The Pharaoh</a></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S3E26 | 22 mins</small>
+                <small class="text-muted">22 mins</small>
               </div>
             </div>
           </div>
- <div class="row">
-         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="felix.eng.html"><img src="assets/images/s3e23-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+            <a href="ladywifi.eng.html"><img src="assets/images/s1e04-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="felix.eng.html">Felix<br><br></a></p>
+              <p class="card-text"><a href="ladywifi.eng.html">Lady Wifi</a></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S3E23 | 22 mins</small>
+                <small class="text-muted">22 mins</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="hearthunter.eng.html"><img src="assets/images/s3e25-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+             <a href="timebreaker.eng.html"><img src="assets/images/s1e05-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="hearthunter.eng.html">Heart Hunter (The Battle of The Miraculous - Part 1)<br></a></p>
+              <p class="card-text"><a href="timebreaker.eng.html">Timebreaker</a></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S3E25 | 22 mins</small>
+                <small class="text-muted">22 mins</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded-0">
-            <a href="miraclequeen.eng.html"><img src="assets/images/s3e26-700x394.jpg" class="img-fluid" alt="Responsive image" title>
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+            <a href="mrpigeon.eng.html"><img src="assets/images/s1e06-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
             <div class="card-body">
-              <p class="card-text"><a href="miraclequeen.eng.html">Miracle Queen (The Battle of The Miraculous - Part 2)</a></p>
+              <p class="card-text"><a href="mrpigeon.eng.html">Mr. Pigeon</a></p>
               <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">S3E26 | 22 mins</small>
+                <small class="text-muted">22 mins</small>
               </div>
             </div>
           </div>
+        </div>
+       <div class="col-md-4">
+          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+            <a href="TheEvilustrator.eng.html"><img src="assets/images/s1e07-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
+            <div class="card-body">
+              <p class="card-text"><a href="TheEvilustrator.eng.html">The Evilustrator </a></p>
+              <div class="d-flex justify-content-between align-items-center">
+                <small class="text-muted">22 mins</small>
+              </div>
+            </div>
+          </div>
+        </div>
 	<head>
 <style>
 /* unvisited link */
