--- a/hometest.html
+++ b/hometest.html
@@ -597,7 +597,7 @@ function showSlides(n) {
             </div>
           </div>
         </div> 
-        </div></div></div></div></main>
+	    </div></div></div></div></div></div></main>
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
