--- a/hometest.html
+++ b/hometest.html
@@ -505,7 +505,7 @@ function showSlides(n) {
     
 </body>
 <div class="album py-5 bg-light">
-   <hr style="width:95%;height:3px" color="grey"><br>
+   <hr style="width:100%;height:3px" color="grey"><br>
 <div class="container">
     <div class="row">
         <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
@@ -597,7 +597,7 @@ function showSlides(n) {
             </div>
           </div>
         </div> 
-	    </div></div></div></div></div></div></main>
+	    </div></div></div></div></div></div></div><div></main>
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
