--- a/hometest.html
+++ b/hometest.html
@@ -505,97 +505,59 @@ function showSlides(n) {
     
 </body>
 <div class="album py-5 bg-light">
-   <hr style="width:105%;height:3px" color="grey"><br>
-<div class="container">
-    <div class="row">
-        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
-      </div>
+<div class="card-deck">
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/assets/images/s3e18-700x394.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
   </div>
-    <!-- Custom styles for this template -->
-    <link href="album.css" rel="stylesheet">
-
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <a href="stormyweather.eng.html"><img src="assets/images/s1e01-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
-            <div class="card-body">
-              <p class="card-text"><a href="stormyweather.eng.html">Stormy Weather</a></p>               
-              <div class="d-flex justify-content-between align-items-center">                 
-                <small class="text-muted">22 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow-sm mb-4 bg-white rounded">
-            <a href="thebubbler.eng.html"><img src="assets/images/s1e02-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
-            <div class="card-body">
-              <p class="card-text"><a href="thebubbler.eng.html">The Bubbler</a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                 <small class="text-muted">22 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-             <a href="thepharaoh.eng.html"><img src="assets/images/s1e03-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
-            <div class="card-body">
-              <p class="card-text"><a href="thepharaoh.eng.html">The Pharaoh</a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">22 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <a href="ladywifi.eng.html"><img src="assets/images/s1e04-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
-            <div class="card-body">
-              <p class="card-text"><a href="ladywifi.eng.html">Lady Wifi</a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">22 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-             <a href="timebreaker.eng.html"><img src="assets/images/s1e05-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
-            <div class="card-body">
-              <p class="card-text"><a href="timebreaker.eng.html">Timebreaker</a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">22 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <a href="mrpigeon.eng.html"><img src="assets/images/s1e06-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
-            <div class="card-body">
-              <p class="card-text"><a href="mrpigeon.eng.html">Mr. Pigeon</a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">22 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-       <div class="col-md-4">
-          <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-            <a href="TheEvilustrator.eng.html"><img src="assets/images/s1e07-700x394.jpg" class="img-fluid" alt="Responsive image" title="" media-simple="true"></a>
-            <div class="card-body">
-              <p class="card-text"><a href="TheEvilustrator.eng.html">The Evilustrator </a></p>
-              <div class="d-flex justify-content-between align-items-center">
-                <small class="text-muted">22 mins</small>
-              </div>
-            </div>
-          </div>
-        </div> 
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/assets/images/s3e19-700x394.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/assets/images/s3e20-700x394.jpg" class="card-img-top" alt="..." title>
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>
+  <div class="card-deck">
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/assets/images/s3e21-700x394.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/assets/images/s3e22-700x394.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/assets/images/s3e23-700x394.jpg" class="card-img-top" alt="..." title>
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>
+</div>
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
