--- a/hometest.html
+++ b/hometest.html
@@ -211,7 +211,7 @@ img {
 .next {
   cursor: pointer;
   position: absolute;
-  top: 2%;
+  top: 20%;
   width: auto;
   padding: 16px;
   margin-top: -50px;
@@ -555,6 +555,10 @@ function showSlides(n) {
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
+  </div>
+</div>
+</div>
+</div>
   </div>
 </div>
 </div>
