--- a/hometest.html
+++ b/hometest.html
@@ -506,7 +506,9 @@ function showSlides(n) {
 </body>
 <div class="album py-5 bg-light">
 	<hr style="width:85%;height:3px" color="grey"><br>
-	<h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
+	<h1>&nbsp;Chibi episodes&nbsp;&nbsp;&nbsp;<br></h1>
+</div>
+<div class="album py-5 bg-light">
 <div class="card-deck">
   <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
     <img src="https://itsladybug.cf/assets/images/s3e18-700x394.jpg" class="card-img-top" alt="...">
