--- a/hometest.html
+++ b/hometest.html
@@ -301,7 +301,7 @@ img {
 </br></br><div class="row">
   <div class="column">
   <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/special%20covid%2019.jpg?raw=true" alt="Snow" style="width:100%">
-	  <figcaption class="figure-caption"><a href="hearthunter.eng.html">Covid-19 Special Clip!</a></figcaption>
+	  <figcaption class="figure-caption"><a href="hearthunter.eng.html"></br>Covid-19 Special Clip!</a></figcaption>
   </div>
   <div class="column">
     <img src="https://i.ytimg.com/vi/4ODgspKhg-I/maxresdefault.jpg" alt="Forest" style="width:100%">
@@ -505,7 +505,7 @@ function showSlides(n) {
     
 </body>
 <div class="album py-5 bg-light">
-	<hr style="width:85%;height:3px" color="grey"><br>
+	<hr style="width:90%;height:3px" color="grey"><br>
 	<h1>&nbsp;Chibi episodes&nbsp;&nbsp;&nbsp;<br></h1>
 </div>
 <div class="album py-5 bg-light">
