--- a/hometest.html
+++ b/hometest.html
@@ -507,7 +507,7 @@ function showSlides(n) {
 </div>
 </div>
 <div class="album py-5 bg-light">
-   <hr style="width:70%;height:3px" color="grey"><br>
+   <hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
     <div class="row">
         <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
@@ -582,6 +582,60 @@ a:active {
 
 </body>	  
         </div></div></div></div></main></div>
+	  <div class="album py-5 bg-light">
+<div class="card-deck">
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/assets/images/s3e18-700x394.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/assets/images/s3e19-700x394.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/assets/images/s3e20-700x394.jpg" class="card-img-top" alt="..." title>
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>
+  <div class="card-deck">
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/assets/images/s3e21-700x394.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/assets/images/s3e22-700x394.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://itsladybug.cf/assets/images/s3e23-700x394.jpg" class="card-img-top" alt="..." title>
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+</div>
+</div>
     <head>	   
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
