--- a/hometest.html
+++ b/hometest.html
@@ -564,6 +564,7 @@ function showSlides(n) {
 </div>
 </div>
 	</div>
+	<hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
     <div class="row">
         <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
