--- a/hometest.html
+++ b/hometest.html
@@ -509,9 +509,9 @@ function showSlides(n) {
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
 	<div class="album py-5 bg-light">
-	<h1>&nbsp;Chibi episodes&nbsp;&nbsp;&nbsp;<br></h1>
 		 <div class="container">
 <div class="card-deck">
+	<h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
   <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
     <img src="https://itsladybug.cf/assets/images/s3e18-700x394.jpg" class="card-img-top" alt="...">
     <div class="card-body">
