--- a/hometest.html
+++ b/hometest.html
@@ -512,8 +512,8 @@ function showSlides(n) {
 		 <div class="container">
 <div class="card-deck">
 	<h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
-  <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
-    <img src="https://itsladybug.cf/assets/images/s3e18-700x394.jpg" class="card-img-top" alt="...">
+	</br><div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+    <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/rooftopdinner.jpg?raw=true" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
