--- a/hometest.html
+++ b/hometest.html
@@ -507,12 +507,14 @@ function showSlides(n) {
 </div>
 </div>
 <div class="album py-5 bg-light">
+<h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
+</div>
+<div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
 	<div class="album py-5 bg-light">
 		 <div class="container">
 <div class="card-deck">
-	<h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
-	</br><div class="card mb-4 shadow-sm mb-4 bg-white rounded">
+<div class="card mb-4 shadow-sm mb-4 bg-white rounded">
     <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/rooftopdinner.jpg?raw=true" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
