--- a/hometest.html
+++ b/hometest.html
@@ -507,10 +507,8 @@ function showSlides(n) {
 </div>
 </div>
 <div class="album py-5 bg-light">
-<h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
-</div>
-<div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
+	</br><h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
 	<div class="album py-5 bg-light">
 		 <div class="container">
 <div class="card-deck">
