--- a/hometest.html
+++ b/hometest.html
@@ -508,7 +508,7 @@ function showSlides(n) {
 </div>
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
-	<h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1></br>
+	&nbsp;&nbsp;<h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1></br>
 	<div class="album py-5 bg-light">
 		 <div class="container">
 <div class="card-deck">
