--- a/hometest.html
+++ b/hometest.html
@@ -508,7 +508,7 @@ function showSlides(n) {
 </div>
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
-	<h2 style="text-align:left">&nbsp;Chibi Episodes!&nbsp;&nbsp;&nbsp;</h2></br>
+	&nbsp;&nbsp;&nbsp;<h1 style="text-align:left">Chibi Episodes!</h1></br>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1></br>
 	<div class="album py-5 bg-light">
 		 <div class="container">
