--- a/hometest.html
+++ b/hometest.html
@@ -509,7 +509,10 @@ function showSlides(n) {
 </div>
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1></br>
+	<h1 style="text-align:center">Chibi Episodes!</h1></br>
+ <div class="row">
+        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
+      </div>
 	<div class="album py-5 bg-light">
 		 <div class="container">
 <div class="card-deck">
