--- a/hometest.html
+++ b/hometest.html
@@ -510,9 +510,6 @@ function showSlides(n) {
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
 	<h1 style="text-align:center">Chibi Episodes!</h1></br>
- <div class="row">
-        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
-      </div>
 	<div class="album py-5 bg-light">
 		 <div class="container">
 <div class="card-deck">
@@ -572,7 +569,7 @@ function showSlides(n) {
 	<hr style="width:85%;height:3px" color="grey"><br>
 <div class="container">
     <div class="row">
-        <h1>&nbsp; Latest episodes&nbsp;&nbsp;&nbsp;<br></h1>
+        <h1 style="text-align:center">Latest Episodes!</h1></br>
       </div>
   </div>
     <!-- Custom styles for this template -->
