--- a/hometest.html
+++ b/hometest.html
@@ -152,7 +152,7 @@
 <button type="button" class="collapsible">The Miraculous Movie Release Date!</button>
 <div class="content">
 	<p></br>The Miraculous Movie will air at the end of 2021.</p>
-<img src="https://raw.githubusercontent.com/itsmiraculous/itsmiraculous.github.io/master/img/XVM10e1baa0-16b0-11ea-a200-f88b95c92545.jpg" class="img-fluid" alt="Responsive image">
+<img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/Ladybug_&_Cat_Noir_Awakening_official_logo.png?raw=true" class="img-fluid" alt="Responsive image">
 </div>
 
 
