--- a/hometest.html
+++ b/hometest.html
@@ -509,10 +509,9 @@ function showSlides(n) {
 </div>
 <div class="album py-5 bg-light">
    <hr style="width:85%;height:3px" color="grey"><br>
-	<h1 style="text-align:center">Chibi Episodes!</h1></br>
 	<div class="album py-5 bg-light">
 		 <div class="container">
-			 <h1>&nbsp; Latest episodes<br><br></h1>
+		<h1>&nbsp;Chibi episodes!<br><br></h1>
 <div class="card-deck">
 <div class="card mb-4 shadow-sm mb-4 bg-white rounded">
     <img src="https://github.com/itsmiraculous/itsmiraculous.github.io/blob/master/img/rooftopdinner.jpg?raw=true" class="card-img-top" alt="...">
