--- a/hometest.html
+++ b/hometest.html
@@ -270,7 +270,7 @@ img {
 }
 </style>
 <body>
-
+        <h1>&nbsp;Video Clips!<br><br></h1>
 	<h2 style="text-align:center">Video Clips!</h2></br>
 
 <div class="container">
@@ -508,7 +508,7 @@ function showSlides(n) {
 </div>
 </div>
 <div class="album py-5 bg-light">
-   <hr style="width:85%;height:3px" color="grey"><br>
+   <hr style="width:85%;height:3px" color="grey">
 	<div class="album py-5 bg-light">
 		 <div class="container">
 		<h1>&nbsp;Chibi episodes!<br><br></h1>
@@ -567,7 +567,7 @@ function showSlides(n) {
 </div>
 	</div>
 	<hr style="width:85%;height:3px" color="grey"><br>
- <h1 style="text-align:center">Latest Episodes!</h1></br>
+ <h1>&nbsp;Latest episodes!<br><br></h1>
 <div class="container">
     <div class="row">
       </div>
